# docs/swagger.yaml
@@ -509,125 +509,6 @@ paths:
       summary: Remove table volume
       tags:
       - tables
-  /users/{user_id}/wishlist:
-    get:
-      deprecated: true
-      description: 'Deprecated: use GET /users/{user_id}/wishlists. Returns the caller''s
-        first wishlist.'
-      parameters:
-      - description: User ID
-        in: path
-        name: user_id
-        required: true
-        type: string
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema: {}
-        "404":
-          description: Not Found
-          schema: {}
-        "500":
-          description: Internal Server Error
-          schema: {}
-      summary: Get wishlist (deprecated)
-      tags:
-      - wishlist
-  /users/{user_id}/wishlist/entries:
-    post:
-      consumes:
-      - application/json
-      deprecated: true
-      description: 'Deprecated: use POST /users/{user_id}/wishlists/{wishlist_id}/entries.'
-      parameters:
-      - description: User ID
-        in: path
-        name: user_id
-        required: true
-        type: string
-      - description: Volume to add
-        in: body
-        name: body
-        required: true
-        schema:
-          $ref: '#/definitions/server.volumeEntryRequest'
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema: {}
-        "400":
-          description: Bad Request
-          schema: {}
-        "500":
-          description: Internal Server Error
-          schema: {}
-      summary: Add wishlist entry (deprecated)
-      tags:
-      - wishlist
-  /users/{user_id}/wishlist/entries/{volume_id}:
-    delete:
-      deprecated: true
-      description: 'Deprecated: use DELETE /users/{user_id}/wishlists/{wishlist_id}/entries/{volume_id}.'
-      parameters:
-      - description: User ID
-        in: path
-        name: user_id
-        required: true
-        type: string
-      - description: Volume ID
-        in: path
-        name: volume_id
-        required: true
-        type: string
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema: {}
-        "500":
-          description: Internal Server Error
-          schema: {}
-      summary: Remove wishlist entry (deprecated)
-      tags:
-      - wishlist
-  /users/{user_id}/wishlist/visibility:
-    put:
-      consumes:
-      - application/json
-      deprecated: true
-      description: 'Deprecated: use PUT /users/{user_id}/wishlists/{wishlist_id}/visibility.'
-      parameters:
-      - description: User ID
-        in: path
-        name: user_id
-        required: true
-        type: string
-      - description: New visibility
-        in: body
-        name: body
-        required: true
-        schema:
-          $ref: '#/definitions/server.visibilityRequest'
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema: {}
-        "400":
-          description: Bad Request
-          schema: {}
-        "500":
-          description: Internal Server Error
-          schema: {}
-      summary: Set wishlist visibility (deprecated)
-      tags:
-      - wishlist
   /users/{user_id}/wishlists:
     get:
       description: List a user's wishlists, filtered to what the caller may see.
